# simple-deploy

./: .env.dist  .gitignore  README.md  conda_executable_paths.txt  env-init.sh  pyproject.toml
src/simpledeploy/: sample_notebook.py
src/simpledeploy/_config/: config_dev.yaml
